[gd_scene load_steps=6 format=3 uid="uid://beprj65unhksn"]

[ext_resource type="PackedScene" uid="uid://737aqfe5a0mp" path="res://left_viewport/ship_deck_view.tscn" id="1_mbetu"]
[ext_resource type="Script" path="res://main.gd" id="1_y5gon"]
[ext_resource type="PackedScene" uid="uid://bfxfddmw86v3l" path="res://right_viewport/sea_map.tscn" id="2_hucxx"]
[ext_resource type="PackedScene" uid="uid://dqo13aryubtnr" path="res://right_viewport/rock.tscn" id="2_nik6d"]

[sub_resource type="Curve2D" id="Curve2D_c74ci"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 896, 192, 0, 0, 0, 0, 1152, 192, 0, 0, 0, 0, 1152, 448, 0, 0, 0, 0, 896, 448, 0, 0, 0, 0, 896, 192)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_y5gon")
rock_scene = ExtResource("2_nik6d")

[node name="ShipDeckView" parent="." instance=ExtResource("1_mbetu")]

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_c74ci")
metadata/_edit_group_ = true

[node name="RockSpawnLocation" type="PathFollow2D" parent="RockPath"]
position = Vector2(896, 192)

[node name="SeaMapView" parent="." instance=ExtResource("2_hucxx")]

[node name="RockTimer" type="Timer" parent="."]

[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
